# Navy-Arp2

./: AppTheme.h  CMakeLists.txt  LICENSE  PluginEditor.cpp  README.md
.github/workflows/: build_and_test.yml  build_standalone.yml
packaging/: installer.iss
source/: AppTheme.h  ChromaCapsLookAndFeel.cpp  ChromaCapsLookAndFeel.h  OledDisplay.cpp  OledDisplay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
